TESTING - sonar scans

--- a/liferay/gradle.properties
+++ b/liferay/gradle.properties
@@ -172,3 +172,10 @@
     # information.
     #
     microsoft.translator.subscription.key=
+
+    # Sonar
+    systemProp.sonar.buildbreaker.skip=true
+    # SonarScanner
+systemProp.sonar.host.url=https://sonarcloud.io
+systemProp.sonar.organization=ajsampang67
+systemProp.sonar.projectKey=ajsampang67_lfrgslocal
